# tibo-codex-reset-watcher

./: .env.example  .gitignore  LICENSE  README.md  config.deepseek.example.yml  config.example.yml  pyproject.toml
.github/workflows/: test.yml
examples/: sample_events.jsonl
examples/fixtures/: tibo_posts.jsonl
src/tibo_codex_reset_watcher/: __init__.py  cli.py  config.py  models.py  runner.py
src/tibo_codex_reset_watcher/classifier/: __init__.py  hints.yml  llm.py  rules.py
src/tibo_codex_reset_watcher/extractors/: __init__.py  time.py
src/tibo_codex_reset_watcher/notify/: __init__.py  console.py  discord.py  email.py  jsonl.py  telegram.py  text.py
src/tibo_codex_reset_watcher/sources/: __init__.py  github.py  x_api.py
src/tibo_codex_reset_watcher/storage/: __init__.py  sqlite.py
tests/: test_cli.py  test_llm.py  test_rules.py  test_runner.py  test_storage.py
